# net-worth

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
artifacts/: convergence_cv.json  convergence_results.json  vectorization_benchmark.json
backend/app/: main.py
backend/app/api/: health.py  predictions.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: elo.py  final_four.py  poisson_model.py  simulator.py  squad_strength.py  (+1 more)
backend/scripts/: convergence_analysis.py  fit_elo.py  ingest_player_club_data.py  ingest_public_data.py  vectorization_benchmark.py
backend/tests/: test_api.py  test_core.py
config/tournaments/: euros_24.json  world_cup_32.json  world_cup_48.json
data/odds/: README.md  wc_2014_odds.csv  wc_2018_odds.csv  wc_2022_odds.csv  wc_2026_odds.csv
data/processed/: eloratings_world_snapshot.csv  fifa_rankings.csv  fifa_rankings_2020_plus.csv  manifest.json  matches_2010_plus.csv  matches_2020_plus.csv  matches_all.csv  matches_euro_2016.csv  matches_euro_2020.csv  matches_euro_2024.csv  matches_wc_2018.csv  matches_wc_2022.csv  matches_wc_2026.csv
data/raw/: eloratings_world.tsv
data/sample/: matches_sample.csv  teams_wc2022.csv
docs/: DATA.md  DESIGN_DECISIONS.md  DESIGN_PLAN.md  KNOWN_ISSUES.md  MODEL_VALIDATION.md  VECTORIZATION.md
frontend/: index.html  package-lock.json  package.json  staging.html  vite.config.js
frontend/src/: App.jsx  StagingApp.jsx  staging.jsx  styles.css
notebooks/: convergence_analysis.py
scripts/: dev-staging.sh
sql/: 001_schema.sql
(+2 files in other folders)
