[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer-mc-predictor"
version = "0.1.0"
description = "Monte Carlo soccer tournament prediction (World Cup + Euros)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scipy>=1.13.0",
  "statsmodels>=0.14.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "python-dateutil>=2.9.0",
  "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
